Changed some translate. Added to agent 1, agent 2 and company 1. company 2. Added eye button. Added faq into seed.

--- a/app/views/admin/organizations/_agents_fields.html.erb
+++ b/app/views/admin/organizations/_agents_fields.html.erb
@@ -39,7 +39,7 @@
   <div class="small-12 columns">
     <%= f.label :public_assignments, t('backend.agents.public_assignments') %>
     <br />
-    <%= f.text_area :public_assignments %>
+    <%= f.text_area :public_assignments, class: 'mceNoEditor' %>
     <%= form_field_errors(f, :public_assignments) %>
   </div>
 
