--- a/app/views/registration_lobbies/index.html.erb
+++ b/app/views/registration_lobbies/index.html.erb
@@ -35,11 +35,12 @@
 
   <div class="small-12 medium-4 column">
     <figure data-equalizer-watch>
-      <%= link_to code_of_conduct_path do %>
+      tiene que ir a FAQ > "Control y Sanciones"
+      <%= link_to faq_path(:anchor => 'faq_24') do %> <!-- 24 is the id position of the question assigned in the backend. It's not a good idea because if changed the position after scroll in the wrong position --->
         <%= image_tag 'homepage/regulations.jpg', alt: t('registration_lobbies_index.normative.normative_title') %>
       <% end %>
       <div class="content">
-        <%= link_to code_of_conduct_path do %>
+        <%= link_to faq_path(:anchor => 'faq_24') do %>
           <p><strong><%= t'registration_lobbies_index.normative.normative_title' %></strong></p>
         <% end %>
         <p>
@@ -113,6 +114,7 @@
     </p>
     <p>
       <%= t'registration_lobbies_index.generic_text_block_third_html' %>
+      Tiene que ir a FAQ y a > ¿Qué es el Registro de Lobbies?
 
     </p>
   </div>
