--- a/app/views/events/_search_form.html.erb
+++ b/app/views/events/_search_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="small-6 medium-8 column">
-    <h1>Eventos</h1>
+    <h1>Solicitud de evento</h1>
   </div>
   <div class="small-6 medium-4 column">
     <%= link_to t('backend.new_event'),
