--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -9,7 +9,7 @@
     <h1><%= t('backend.faq.questions') %></h1>
 
     <% @questions.each do |question| %>
-      <div class="faq_question_container">
+      <div class="faq_question_container" id='faq_<%= question.position %>'>
         <h2 class="faq_question"><%= question.position %>. <%= question.title %></h2>
         <%= question.answer.html_safe %>
       </div>
