Aligned button on the right.

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7617,3 +7617,10 @@ header .top-bar{
     font-size: 1.4rem;
   }
 }
+
+.represented-entities-block,
+.agents-block {
+  .link_to_remove_association{
+    margin-top: 1.8rem;
+  }
+}
