--- a/app/views/events/_event_agents.html.erb
+++ b/app/views/events/_event_agents.html.erb
@@ -11,7 +11,7 @@
     <%= link_to_add_association t('backend.add'), f, :event_agents,
                                partial: "event_agents_fields",
                                id: "event_agents_link",
-                               class: "button tiny radius info",
+                               class: "button tiny radius info right",
                                data:  {
                                  association_insertion_node: "#nested-event-agents",
                                  association_insertion_method: "append"
