--- a/app/views/events/_event_represented_entities_fields.html.erb
+++ b/app/views/events/_event_represented_entities_fields.html.erb
@@ -2,7 +2,7 @@
   <div class="small-12">
     <%= f.hidden_field :id %>
 
-    <div class="small-12 medium-6 columns">
+    <div class="small-12 medium-8 columns">
       <%= f.label :name, t('backend.represented_entities.name') %>
       <% if f.object.id.present? %>
         <%= f.select :name, [[f.object.name, f.object.name]], class: "large-8 columns unique", prompt: t('backend.select') %>
@@ -11,9 +11,9 @@
       <% end %>
     </div>
 
-    <div class="small-12 columns">
-      <%= link_to_remove_association "Eliminar", f, class: "button tiny radius alert right link_to_remove_association" %>
-      <hr />
+    <div class="small-6 medium-4 columns ">
+      <%= link_to_remove_association "Eliminar", f, class: "button right tiny radius alert link_to_remove_association" %>
+
     </div>
 
   </div>
