--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -115,6 +115,7 @@
         <% end %>
 
         <%= render 'event_represented_entities', f:f %>
+        <hr />
         <%= render 'event_agents', f:f %>
 
       </div>
@@ -128,7 +129,7 @@
         <% end %>
       </div>
       <div class="small-12 column">
-        <%= link_to_add_association t('backend.add'), f, :attendees, :class => "button radius tiny info right add-attendee",'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#attendees' %>
+        <%= link_to_add_association t('backend.add'), f, :attendees, :class => "button radius tiny info add-attendee right",'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#attendees' %>
       </div>
     </fieldset>
 
@@ -141,7 +142,7 @@
         <% end %>
       </div>
       <div class="small-12 columns">
-        <%= link_to_add_association t('backend.add'), f, :attachments, :class => "button radius tiny info right add-attachment",'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#attachments' %>
+        <%= link_to_add_association t('backend.add'), f, :attachments, :class => "button radius tiny info add-attachment right",'data-association-insertion-method' => 'append', 'data-association-insertion-node' => '#attachments' %>
       </div>
     </fieldset>
 
