--- a/app/views/events/_event_agents_fields.html.erb
+++ b/app/views/events/_event_agents_fields.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id(f.object) %>" class="nested-fields">
+<div id="<%= dom_id(f.object) %>" class="nested-fields agents">
   <div class="small-12">
     <%= f.hidden_field :id %>
 
