--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -186,7 +186,7 @@
       </div>
     </fieldset>
 
-    <% if f.object.user != current_user %>
+    <% if event_edit? %>
       <fieldset class="cancel-reason-activity">
         <% canceled_event = canceled_event(f.object) %>
         <% if canceled_event %>
@@ -213,7 +213,9 @@
           </div>
         <% end %>
       </fieldset>
+    <% end %>
 
+    <% if admin_or_mananger_edit? %>
       <fieldset class="decline-reason-activity">
         <% declined_event = declined_event(f.object) %>
         <% if declined_event %>
