Events change style show. Aligned icon. Changed text in the sidebar.

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -338,7 +338,10 @@ table.event{
     width: 16rem;
   }
   td.event_actions {
-    width: 6rem;
+    width: 8rem;
+    a{
+      margin-right:3px;
+    }
   }
 }
 
