--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -1,7 +1,11 @@
 <nav class="admin-sidebar mb40">
   <ul id="admin_menu">
     <li>
-      <%= t('backend.menu_title') %>
+      <% if current_user.admin? %>
+        <%= t('backend.menu_admin') %>
+      <% else %>
+        <%= t('backend.menu_lobby') %>
+      <% end %>
     </li>
     <% if current_user.admin? %>
     <li class="<%= active_menu('users') %>">
