Fix remarks. Add links

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -16,10 +16,10 @@
           <%= link_to t('footer.btn_agendas'), visitors_path  %>
         </li>
         <li>
-          <%= link_to t('footer.btn_registration'), nil  %>
+          <%= link_to t('footer.btn_registration'), registration_lobbies_path  %>
         </li>
         <li>
-          <%= link_to t('footer.btn_normative'), nil  %>
+          <%= link_to t('footer.btn_normative'), 'https://transparencia.madrid.es/portales/transparencia/es/Informacion-juridica/Huella-normativa?vgnextfmt=default&vgnextchannel=4099508929a56510VgnVCM1000008a4a900aRCRD' %>
         </li>
 
       </ul>
