--- a/app/views/infringement_emails/new.html.erb
+++ b/app/views/infringement_emails/new.html.erb
@@ -68,4 +68,4 @@
   </fieldset>
   <%= f.submit t('infringement_mailbox.send'), class: "button radius success right" %>
 <% end %>
-<%= tinymce :language => I18n.locale %>
+<%#= tinymce :language => I18n.locale %>
