--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -7032,12 +7032,15 @@ header{
   line-height: 48px;
   font-family: 'Open Sans';
   display: block;
-  margin-bottom: 50px; }
+
+}
 @media only screen and (max-width: 40em) {
   .title-l {
     font-size: 26px;
     line-height: 28px;
-    margin-bottom: 20px; } }
+    margin-bottom: 20px;
+  }
+}
 
 .title-m {
   font-size: 28px;
@@ -7285,7 +7288,7 @@ button, a {
 }
 .title-l {
   font-weight: 700;
-  margin-bottom: 70px;
+  // margin-bottom: 70px;
 }
 select {
   height: 3.1125rem;
@@ -7626,4 +7629,39 @@ header .top-bar{
   .link_to_remove_association{
     margin-top: 1.8rem;
   }
+}
+
+.visit-organizations-list{
+  select {
+    height: 2.8rem;
+  }
+
+  .button.small{
+    padding-left: 1.3rem;
+    padding-right: 1.3rem;
+  }
+
+  .result-l,
+  .export {
+    margin-top: 1.3rem;
+  }
+
+  .box .post{
+    border-bottom: 0;
+    margin-bottom:0;
+    padding: 1.6rem 1rem;
+  }
+
+  article{
+    &:nth-child(odd){
+      background: #f8f8f8;
+    }
+    &:nth-child(even){
+      background: #f1f1f1;
+    }
+  }
+}
+
+.no-padding{
+  padding: 0;
 }
