--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="small-12 columns">
     <%= link_to t('backend.faq.questions'), faq_path, class: 'right' %>
-    <h2 class="title-l"><%= t('main.title')%></h2>
+    <h2 class="title-l mb20"><%= t('main.title')%></h2>
   </div>
 </div>
 
@@ -47,11 +47,6 @@
       <%= paginate @events.hits %>
     </div>
   </div>
-  <!--
-  <div class="small-12 large-4 columns">
-    <p><%= link_to t('main.any_errors'), '' %></p>
-  </div>
-  -->
 </div>
 
 
