--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div class="row">
-      <div class="small-8 columns">
+      <div class="small-8 columns mb20">
         <div class="row">
           <div class="small-3 columns">
             <label for="right-label" class="inline title-xs"><%= t('main.form.order_by')%></label>
