Changed text Guardar with Enviar la solicitud.

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -246,7 +246,7 @@
       </fieldset>
     <% end %>
 
-  <%= submit_tag t('backend.save'), :class=> "button radius success right" %>
+  <%= submit_tag t('backend.save_request'), :class=> "button radius success right" %>
 <% end %>
 
 <%= javascript_include_tag 'events'%>
